# opal-admin

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  REUSE.toml  THIRDPARTY.md  _typos.toml  adrs.toml  compose.yaml  diagram.puml  docker-compose.ssl.yml  docker-compose.yml  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  pytest.toml  renovate.json  renovate.json5  ruff.toml  setup.cfg  zizmor.yml
.envs/: mariadb.dev  postgres.dev  postgres.sample
.github/workflows/: build.yml  ci.yml  npm-update.yaml  release.yml  test.yml  thirdparty.yaml  thirdparty.yml
.gitlab/markdownlint/: .markdownlint-cli2.yaml
.gitlab/markdownlint/markdownlint-cli2-formatter-gitlab/: markdownlint-cli2-formatter-gitlab.js  package.json
.gitlab/merge_request_templates/: Default.md
LICENSES/: LicenseRef-OpalTrademarks.txt
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
configs/cron-jobs/: check-databases-deviations-cron
configs/cron-jobs/scripts/: check-databases-deviations.sh
docker/: crontab  docker-entrypoint.sh  start.sh
docker/mariadb/config/: ssl.cnf
docker/mariadb/scripts/: grant_test_db.sh
docs/: architecture.md  authentication.md  changelog.md  gen_reference_nav.py  index.md  legacy_db.md  mock_django.py  mock_drf.py  standard_and_custom_permissions.md  translation.md
docs/adr/: 0001-record-architecture-decisions.md
docs/apps/: caregivers.md  health_data.md  new_app.md  patients.md  questionnaires.md  standard_and_custom_permissions.md  structure.md  users.md
docs/database/: legacy_db.md  migrations.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-add-support-for-patient-reported-data.md  0003-timestamped-model-mixin.md
locale/fr/LC_MESSAGES/: django.po
opal/: asgi.py  auth.py  conftest.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
opal/caregivers/: admin.py  apps.py  constants.py  factories.py  managers.py  models.py  translation.py
opal/caregivers/api/: serializer.py  serializers.py  views.py  viewsets.py
opal/caregivers/migrations/: 0001_caregiverprofile.py  0002_registrationcode.py  0002_securityquestion.py  0003_securityquestion.py  0004_caregiverprofile_uuid.py  0004_device.py  0005_device.py  0006_emailverification.py  0007_device_push_token.py  0007_remove_email_verification_code.py  0008_modify_caregiverprofile_legacyid.py  0009_alter_registrationcode_creation_date.py  0009_update_creation_date_field.py
opal/caregivers/tests/: test_api_views.py  test_apiview.py  test_apiviews.py  test_commands.py  test_managers.py  test_migrations.py  test_models.py  test_viewsets.py
opal/core/: api_urls.py  apps.py  audit.py  auth.py  constants.py  context_processors.py  dbrouters.py  drf_fields.py  drf_permissions.py  fields.py  form_layouts.py  middleware.py  models.py  signals.py  test_utils.py  utils.py  validators.py  views.py
opal/core/api/: mixins.py  serializers.py  views.py
opal/core/drf_parsers/: hl7_parser.py  whatever.py
opal/core/forms/: layouts.py  widgets.py
opal/core/parsers/: hl7_parser.py
opal/core/services/: hospital.py  reports.py
opal/core/templates/: image_input_preview.html
opal/core/templatetags/: extra_filters.py
opal/core/tests/: test_api_urls.py  test_auth.py  test_commands.py  test_context_processors.py  test_dbrouters.py  test_drf_fields.py  test_drf_permissions.py  test_extra_filters.py  test_form_layouts.py  test_middleware.py  test_parsers.py  test_urls.py  test_utils.py  test_validators.py  test_views.py
opal/databank/: admin.py  apps.py  factories.py  models.py
opal/databank/api/: serializers.py  views.py
opal/databank/migrations/: 0001_initial.py  0002_shared_data.py  0003_alter_databankconsent_last_synchronized.py  0003_databankconsent_guid.py  (+2 more)
opal/health_data/: admin.py  apps.py  factories.py  managers.py  models.py  urls.py  utils.py  views.py
opal/hospital_settings/: admin.py  apps.py  conftest.py  constants.py  factories.py  forms.py  models.py  serializers.py  tables.py  translation.py  urls.py  views.py
opal/legacy/: apps.py  conftest.py  factories.py  managers.py  models.py  utils.py
opal/legacy_questionnaires/: apps.py  factories.py  managers.py  models.py
opal/patients/: admin.py  apps.py  conftest.py  constants.py  factories.py  filters.py  forms.py  managers.py  models.py  serializer.py  table.py  tables.py  translation.py  urls.py  utils.py  validators.py  views.py
opal/pharmacy/: admin.py  factories.py  models.py
opal/questionnaires/: admin.py  apps.py  backend.py  factories.py  models.py  queries.py  tables.py  urls.py  views.py
opal/report_settings/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
opal/services/: apps.py  charts.py  common.py  hospital.py  hospital_communication.py  hospital_data.py  hospital_error.py  hospital_validation.py  pdf_generator.py  questionnaire_reports.py  reports.py  twilio.py
opal/templates/: base.html  base_generic.html  components.yaml  sidebar.html  sidebar_base.html  sidebar_items.html  sidebar_menu.html
opal/test_results/: admin.py  factories.py  models.py  utils.py
opal/tests/: test_auth.py  test_base64_util.py  test_context_processors.py  test_hospital.py  test_middleware.py  test_reports.py  test_settings.py  test_sidebar.py  test_urls.py  test_views.py
opal/usage_statistics/: admin.py  apps.py  common.py  conftest.py  constants.py  factories.py  forms.py  models.py  queries.py  urls.py  utils.py  views.py
opal/users/: admin.py  apps.py  conftest.py  factories.py  filters.py  models.py  tables.py  urls.py  views.py
opal/utils/: base64.py  base64_util.py  base64_utils.py  drf_permissions.py  hl7_parser.py  marge_pharmacy.hl7v2
requirements/: base.txt  development.txt  docs.txt  production.txt
scripts/: check-questionnaire-respondents.sh  check_crontab.sh
scripts/cron/: crontab
scripts/cronjobs/: check-databases-deviations-cron  opal-cronjobs
(+459 files in other folders)
