# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "admin"
version = "0"
description = "New administrative web application used to configure Opal and its content"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "argon2-cffi==25.1.0",
    "authlib==1.6.6",
    "crispy-bootstrap5==2025.6",
    "dj-rest-auth==7.0.1",
    "django==5.2.10",
    "django-auditlog==3.4.1",
    "django-cors-headers==4.9.0",
    "django-crispy-forms==2.5",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-forms-dynamic==1.0.0",
    "django-modeltranslation==0.19.19",
    "django-phonenumber-field[phonenumberslite]==8.4.0",
    "django-storages==1.14.6",
    "django-structlog==10.0.0",
    # required as a runtime dependency due to the need to monkeypatch at runtime for generics
    # see: https://github.com/typeddjango/django-stubs/tree/master/ext
    "django-stubs-ext==5.2.8",
    "django-tables2==2.8.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "fhir-resources==8.0.0",
    "fpdf2==2.8.5",
    "hl7apy==1.3.5",
    # required for image export in plotly
    "kaleido==1.2.0",
    "mysqlclient==2.2.7",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    # required for ImageFields
    "pillow==12.0.0",
    "plotly==6.3.0",
    "pydantic==2.12.5",
    "python-jose[cryptography]==3.5.0",
    "qrcode==8.2",
    "requests==2.32.5",
    "slippers==0.6.2",
    "twilio==9.9.1",
    "unidecode==1.4.0",
    "whitenoise[brotli]==6.11.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.14.3",
    "coverage==7.13.1",
    "django-coverage-plugin==3.2.0",
    "django-stubs==5.2.8",
    "django-test-migrations==1.5.0",
    "djangorestframework-stubs==3.16.6",
    "factory-boy==3.3.3",
    "mypy[faster-cache]==1.19.1",
    "pandas-stubs==2.3.3.251219",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-socket==0.7.0",
    "pytest-sugar==1.1.1",
    "ruff==0.14.9",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-fpdf2==2.8.4.20251031",
    "types-python-dateutil==2.9.0.20251115",
    "types-requests==2.32.4.20260107",
]
docs = [
    "mkdocs-autorefs==1.4.3",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.1",
    "mkdocstrings[python-legacy]==0.30.1",
]
