# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "admin"
version = "0"
description = "New administrative web application used to configure Opal and its content"
readme = "README.md"
requires-python = "==3.13.13"
dependencies = [
    "argon2-cffi==25.1.0",
    "authlib==1.6.11",
    "crispy-bootstrap5==2026.3",
    "dj-rest-auth==7.2.0",
    "django==6.0.4",
    "django-auditlog==3.4.1",
    "django-cors-headers==4.9.0",
    "django-crispy-forms==2.6",
    "django-environ==0.13.0",
    "django-filter==25.2",
    "django-forms-dynamic==1.0.0",
    "django-model-utils==5.0.0",
    "django-modeltranslation==0.20.3",
    "django-phonenumber-field[phonenumberslite]==8.4.0",
    "django-storages==1.14.6",
    "django-structlog==10.0.0",
    # required as a runtime dependency due to the need to monkeypatch at runtime for generics
    # see: https://github.com/typeddjango/django-stubs/tree/master/ext
    "django-stubs-ext==6.0.2",
    "django-tables2==3.0.0",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.29.0",
    "fhir-resources==8.2.0",
    "fpdf2==2.8.7",
    "hl7apy==1.3.5",
    # required for image export in plotly
    "kaleido==1.2.0",
    "mysqlclient==2.2.8",
    "openpyxl==3.1.5",
    "pandas==3.0.2",
    # required for ImageFields
    "pillow==12.2.0",
    "plotly==6.7.0",
    "pydantic==2.12.5",
    "python-jose[cryptography]==3.5.0",
    "qrcode==8.2",
    "requests==2.33.1",
    "slippers==0.6.3",
    "twilio==9.10.4",
    "unidecode==1.4.0",
    "whitenoise[brotli]==6.12.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn==25.3.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.14.3",
    "coverage==7.13.5",
    "django-coverage-plugin==3.2.2",
    "django-extensions==4.1",
    "django-stubs==6.0.2",
    "django-test-migrations==1.5.0",
    "djangorestframework-stubs==3.16.9",
    "factory-boy==3.3.3",
    "mypy[faster-cache]==1.20.1",
    "pandas-stubs==3.0.0.260204",
    "prek==0.3.9",
    "pytest==9.0.3",
    # for proper coverage support with pytest-xdist
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-socket==0.7.0",
    "pytest-sugar==1.1.1",
    "pytest-xdist==3.8.0",
    "ruff==0.15.11",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-fpdf2==2.8.4.20260408",
    "types-python-dateutil==2.9.0.20260408",
    "types-requests==2.33.0.20260408",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python-legacy]==1.0.4",
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"
